Fixed visibleMarker updates and UI for placeSearch dropdown

--- a/src/components/css/placeSearch.css
+++ b/src/components/css/placeSearch.css
@@ -7,7 +7,7 @@
     z-index: 100;
 }
 
-hr{
+hr.DropdownBreakStyle{
     border: 1px solid;
     margin: 0;
     z-index: 101;
